--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,8 @@
   --bg: #f7f8fa;
   --card: #ffffff;
   --muted: #6b7280;
-  --primary: #0f766e; /* verde suave */
+  --primary: #0f766e;
+  --purple: rgba(123, 39, 192, 0.77);
   --accent: #10b981;
   --danger: #ef4444;
   --border: #e6e9ee;
@@ -22,8 +23,11 @@ html,body,#root { height: 100%; margin: 0; background: var(--bg); color: #0f172a
 }
 
 .container-user {
+  margin-top: 30px;
   display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 10px;
 }
 
@@ -87,10 +91,24 @@ html,body,#root { height: 100%; margin: 0; background: var(--bg); color: #0f172a
 }
 .input {
   padding: 12px 14px;
-  border-radius: 10px;
-  border: 1px solid var(--border);
+  border: none;
+  outline: none;
   background: #fff;
-  font-size: 14px;
+  font-size: 18px;
+  transition: all .1s ease;
+  color: var(--purple);
+  font-weight: 800;
+}
+.input:focus {
+  border-bottom: 2px solid var(--purple);
+}
+.input::placeholder {
+  color: rgba(172, 173, 175, 0.671);
+  font-weight: 600;
+}
+.label {
+  margin-top: 25px;
+  color: rgba(123, 39, 192, 0.77);
 }
 .btn {
   padding: 12px 14px;
